--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/website_icon.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Ducklings Studio official website"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/website_icon.png" />
-    <title>Ducklings Studio</title>
-    <script type="application/ld+json">
-      {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/website_icon.png"/><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Ducklings Studio official website"/><link rel="apple-touch-icon" href="/website_icon.png"/><title>Ducklings Studio</title><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "Organization",
         "image": "https://raw.githubusercontent.com/Ducklings-Studio/website-ducklings-studio/main/public/ducklings_studio_logo.png",
@@ -22,10 +8,7 @@
         "name": "Ducklings Studio",
         "description": "We make high-quality games",
         "email": "the.ducklings.studio@gmail.com"
-      }
-    </script>
-    <script type="application/ld+json">
-      {
+      }</script><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
         "name": "Mushroots",
@@ -45,10 +28,4 @@
         },
         "genre":"Real Time Strategy",
         "gamePlatform":["Windows", "OSX","Linux"]
-      }
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+      }</script><script defer="defer" src="/static/js/main.cc5fd54e.js"></script><link href="/static/css/main.3820adb0.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
